feat(walker): complete NavigationEngine unification